Implement JWT authentication and role based access control